# scale66-frontend

./: .cursorignore  .gitignore  README.md  README_API.md  SETUP_CHECKLIST.md  eslint.config.mjs  package-lock.json  package.json
.cursor/rules/: README.md  ai-agent-pattern.mdc  project-structure.mdc  self-improvement.mdc  update-readme.mdc
.cursor/rules/components/: frontend-components.mdc
.cursor/rules/general/: context-priming.mdc  cursor-rules.mdc  update-readme.mdc
.cursor/rules/meta/: clarify-intent.mdc  cursor-rules.mdc  preserve-patterns.mdc  project-structure.mdc  self-improvement.mdc  update-readme.mdc
.github/workflows/: deploy-frontend.yml  firebase-deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: .config.py.icloud  .env  .env.example  .gitignore  AI_SERVICE_USAGE.md  README.md  config.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_all.sh  run_backend.sh  run_streamlit.sh  run_streamlit_test.sh  streamlit_test.py  test_agentic_workflow.py
backend/app/agents/: __init__.py  base_agent.py  caption_generator.py  carousel_format_decider.py  carousel_generator.py  content_generator.py  finalizer.py  format_decider.py  format_selector.py  image_generator.py  image_prompt_enhancer.py  orchestrator.py  slide_generator.py  story_generator.py  strategy_generator.py  style_generator.py  template_decider.py  text_generator.py
backend/app/api/: __init__.py  dependencies.py  deps.py  routes.py
backend/app/api/schemas/: __init__.py  brand_kit.py  campaign.py  payment.py  post.py  social_account.py  user.py
backend/app/api/v1/: __init__.py  auth.py  brand_kit.py  brand_kits.py  campaigns.py  content.py  payment.py  payments.py  posts.py  social.py  social_accounts.py  users.py
backend/app/constants/: __init__.py  carousel_formats.py
backend/app/core/: config.py  logging.py  pipeline.py  security.py  supabase.py
backend/app/crud/: __init__.py  base.py  brand_kit.py  campaign.py  payment.py  post.py  session.py  social_account.py  user.py
backend/app/models/: __init__.py  brand_kit.py  campaign.py  common.py  content.py  payment.py  pipeline.py  post.py  schemas.py  social.py  structured.py  user.py
backend/app/router/: routes.py
backend/app/services/: __init__.py  email_service.py  gemini_service.py  image_overlay_service.py  openai_service.py  social_media_service.py  storage_service.py  stripe_service.py  template_service.py
backend/app/services/ai/: __init__.py  anthropic_service.py  gemini_service.py  openai_service.py
backend/app/utils/: __init__.py  file_handlers.py  formatters.py  validators.py
backend/core/: image_generator.py  prompts.py
backend/data/clients/thehiverapp/: brand.json
backend/routers/: brands.py  image.py
backend/schemas/: requests.py  responses.py
backend/scripts/: __init__.py  analyze_slide.py  cleanup_brand_json.py  convert_to_story.py  instagram_scraper.py  run_full_pipeline.py  test_caption_generator.py  test_format_decider.py  test_full_pipeline.py  test_image_generator.py  test_slide_generator.py  test_strategy_generator.py  test_template_decider.py  test_text_generator.py
backend/scripts/tests/: test_caption_generator.py  test_full_pipeline.py  test_slide_generator.py
backend/streamlit_app/: main.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20240115000000_create_initial_schema.sql  README.md
backend/templates/: templates.json
backend/tests/: test_carousel_update.py  test_pipeline.py
frontend/: .env.example  .firebaserc  .gitignore  ENV_SETUP.md  MIGRATION_NOTES.md  README.md  README_API.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/.firebase/: hosting.LmZpcmViYXNlL3NjYWxlNjYtYXBwL2hvc3Rpbmc.cache
frontend/src/: globals.css  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/components/: index.ts
src/config/: env.ts  index.ts
src/context/: AuthContext.tsx  AuthModalContext.tsx  BrandContext.tsx
src/data/: brandStyles.ts  pricingPlans.ts
src/features/: index.ts
src/hooks/: index.ts  useAuth.ts  useDebounce.ts  useLocalStorage.ts  useMediaQuery.ts
src/lib/: supabase.ts
src/styles/: utilities.css
src/types/: brand.types.ts  index.ts  post.types.ts
src/utils/: auth-redirect.ts  constants.ts  date.ts  formatters.ts  index.ts  storage.ts  validation.ts
(+393 files in other folders)
